Matplotlib in flask

--- a/web_flask/templates/interpolation/rbf.html
+++ b/web_flask/templates/interpolation/rbf.html
@@ -3,6 +3,15 @@
 
 <div class="row">
     <h1>Radial basis function</h1>
+
+    <p>
+    <strong>Radial basis function (RBF) interpolation</strong> is an advanced method in approximation theory for constructing high-order accurate interpolants of unstructured data, possibly in high-dimensional spaces. The interpolant takes the form of a weighted sum of radial basis functions, like for example Gaussian distributions. RBF interpolation is a mesh-free method, meaning the nodes (points in the domain) need not lie on a structured grid, and does not require the formation of a mesh. <a href="https://en.wikipedia.org/wiki/Radial_basis_function_interpolation">Wikipedia</a>
+</p>
+</div>
+
+<div class="row">
+    <h2>This is an example of a matplotlib plot generated on the server</h2>
+    <img src="data:image/png;base64,{{plot}}"/>
 </div>
 
 {% endblock %}
