--- a/web_flask/templates/sampling.html
+++ b/web_flask/templates/sampling.html
@@ -34,6 +34,10 @@
     </form>
 
     <div id="main">
+      <p>This is an example of a plot generated with the Javascript library Plotly. 
+        <a href="https://plotly.com/javascript/line-and-scatter/">Documentation</a>
+
+        </p>
 
         <div id="plot">
             
